# JapaneseLangCompanion

JapaneLanguageCompanion/: practive.py
JapaneLanguageCompanion/Backend/: go.mod  go.sum  main.go  testing.json
JapaneLanguageCompanion/Backend/db/: db.go
JapaneLanguageCompanion/Backend/handlers/: kana_kanji.go  user_progress.go  users.go
JapaneLanguageCompanion/Backend/models/: Users.go  models.go
JapaneLanguageCompanion/Backend/utils/: userUtils.go  utils.go
JapaneLanguageCompanion/Frontend/: User Login.html
JapaneLanguageCompanion/Frontend/public/: index.html  index.js  japanese.json  login.css  style.css
JapaneLanguageCompanion/Frontend/views/: index.html
japlearning/: pyproject.toml
