[tool.poetry]
name = "japlearning"
version = "0.1.0"
description = ""
authors = ["Joseph Gabrie <josephgabriemolina@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
flask-jwt-extended = "^4.3.1"
flask-sqlalchemy = "^2.5.1"
psycopg2 = "^2.9.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
